--- a/marqueetext/build.gradle
+++ b/marqueetext/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile('cn.qqtheme.framework:ColorPicker:1.5.5') {
         exclude group: 'com.android.support'
     }
+    compile 'com.dalong:marqueeview:1.0.1'
 }
